--- a/src/components/Css_Modules/App.module.css
+++ b/src/components/Css_Modules/App.module.css
@@ -4,3 +4,19 @@ body{
     background-repeat: no-repeat;
     background-position: center center;
 }
+a{
+    text-decoration: none;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size: 17px;
+    padding: 1em 2.7em;
+    font-weight: 500;
+    background: #1F2937;
+    color: white;
+    border: none;
+    position: relative;
+    overflow: hidden;
+    border-radius: 0.6em;
+}
+.disabled{
+    display: none;
+}
