--- a/src/components/Css_Modules/Nav.module.css
+++ b/src/components/Css_Modules/Nav.module.css
@@ -5,7 +5,21 @@ height:100px;
 display:flex;
 align-items: center;
 justify-content: flex-end;
+gap: 10px;
 }
 .disabled{
     display: none;
+}
+.buttonStyles{
+    text-decoration: none;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size: 17px;
+    padding: 1em 2.7em;
+    font-weight: 500;
+    background: #1F2937;
+    color: white;
+    border: none;
+    position: relative;
+    overflow: hidden;
+    border-radius: 0.6em;
 }
